Spacing fix

--- a/theme/sigma9.css
+++ b/theme/sigma9.css
@@ -1287,7 +1287,7 @@ table.wiki-content-table th {
     --featured-radius: 8px;
     --content-panel-accent: #274463;
     position: relative;
-    padding: 2rem 1rem 1rem;
+    padding: 2rem 1.25rem 0.5rem;
     box-shadow: 1px 1px 3px rgba(0 0 0 / 25%);
 }
 .content-panel .panel-body {
